Fix QQuickFramebufferObject::Renderer::invalidateFramebufferObject()

invalidateFramebufferObject() sets the invalidatePending flag, which
should then trigger the deletion of the old FBO and allocation via
Renderer::createFramebufferObject(). This does only happen though,
if the size has changed.

Instead, always create a new FBO if invalidateFramebufferObject() has
been called, regardless of whether the size changes or not.

Change-Id: I849cb858afac89038343457c6362233c34956d58
Task-number: QTBUG-54434
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>